<resources>
    <string name="app_name">test_third_month</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="institution_name">Burger Craze</string>
    <string name="open">OPEN</string>
    <string name="stars">4.6</string>
    <string name="response_rate">(601)</string>
    <string name="product_name">American</string>
    <string name="product_name_two">Burgers</string>
    <string name="delivery_is">Delivery:</string>
    <string name="free">FREE</string>
    <string name="minimum">Minimum:</string>
    <string name="price">$10</string>
    <string name="menu">Menu</string>
    <string name="search_product_by_name">Search product by name</string>
    <string name="location">225 Central Park West, NY 10024, USA</string>
    <string name="pickup">Pickup</string>
    <string name="catering">Catering</string>
    <string name="curbside">Curbside</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="_58">58</string>
    <string name="stores_open">stores Open</string>
</resources>