<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="11dp"
    android:layout_marginBottom="40dp">

    <ImageView
        android:id="@+id/item_one_main_image"
        android:layout_width="match_parent"
        android:layout_height="194.02dp"
        android:scaleType="fitXY"
        android:src="@drawable/item_one_main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="168dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_one_main_image">

        <LinearLayout
            android:id="@+id/item_one_container_title_store_stuff_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/institution_name"
                android:textColor="#373737"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="11.5dp"
                android:background="@drawable/green_dot"
                app:layout_constraintStart_toEndOf="@+id/textView_title_stores_stuff_item" />

            <TextView
                android:id="@+id/isOpen"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="3.5dp"
                android:text="@string/open"
                android:textColor="#82C446"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_one_container_menu_position"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_one_container_title_store_stuff_info">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="6.5dp"
                android:src="@drawable/star_view" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/stars"
                android:textColor="#373737"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rateInt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8.5dp"
                android:gravity="top"
                android:text="@string/response_rate"
                android:textColor="#838383"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/product_name"
                android:textColor="#838383"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginHorizontal="7dp"
                android:src="@drawable/grey_dot" />

            <TextView
                android:id="@+id/product"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_name_two"
                android:textColor="#838383"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_price_store_stuff_info"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_one_container_menu_position">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/delivery_is"
                android:textColor="#838383"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/deliveryPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/free"
                android:textColor="#838383"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/grey_dot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/minimum"
                android:textColor="#838383"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/minimumPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/price"
                android:textColor="#838383"
                android:textSize="12sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:src="@drawable/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_one_main_image" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="11dp"
        android:src="@drawable/navigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time" />
</androidx.constraintlayout.widget.ConstraintLayout>
