<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ion_call"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="41dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/mark_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="17dp"
            android:text="@string/location"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="6dp"
            android:layout_gravity="end"
            android:layout_marginStart="381dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/arrow_down" />
    </Toolbar>

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8.44dp"
                android:background="@drawable/button"
                android:drawableStart="@drawable/delivery"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8.44dp"
                android:background="@drawable/button_white"
                android:backgroundTint="@color/white"
                android:text="@string/pickup"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8.44dp"
                android:background="@drawable/button_white"
                android:backgroundTint="@color/white"
                android:text="@string/catering"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/button_white"
                android:backgroundTint="@color/white"
                android:text="@string/curbside"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="13sp" />
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="387dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15.52dp"
            android:src="@drawable/search" />

        <EditText
            android:layout_width="275dp"
            android:layout_height="48dp"
            android:layout_marginStart="15.52dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:hint="@string/find_store_by_name" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/options" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:listitem="@layout/item_stores" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressLinear"
        android:layout_width="103dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:background="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <LinearLayout
        android:id="@+id/openShop"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressLinear">

        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/_58"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:text="@string/stores_open"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent" android:layout_marginStart="13dp"
        android:layout_marginTop="18.5dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintTop_toBottomOf="@+id/openShop"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_cafe" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>